# ContactConVerter

./: .gitignore  CMakeLists.txt  README.md  convertor.html  deti-kontakty-telefon.vcf  main.cpp  nvm.txt  output.txt
